--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Django==3.2
 django-ckeditor==6.2.0
 django-environ==0.8.1
 django-js-asset==1.2.2
-django-taggit==2.1.0
+django-allauth==0.48.0
 Pillow==9.0.0
 pytz==2021.3
 psycopg2-binary==2.9.1
