--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ pycparser==2.21
 PyJWT==2.3.0
 python-dateutil==2.8.2
 python-decouple==3.6
+python-dotenv==0.20.0
 python3-openid==3.2.0
 pytz==2021.3
 requests==2.27.1
